src/org/javaavc/gen/avfilter/LibavfilterLibrary.java

	/**
	 * Make the filter instance process a command.<br>
	 * It is recommended to use avfilter_graph_send_command().<br>
	 * Original signature : <code>int avfilter_process_command(AVFilterContext*, const char*, const char*, char*, int, int)</code>
	 */
	int avfilter_process_command(AVFilterContext filter, String cmd, String arg, ByteBuffer res, int res_len, int flags);
	/**
	 * Initialize the filter system. Register all builtin filters.<br>
	 * Original signature : <code>void avfilter_register_all()</code>
	 */
	void avfilter_register_all();
	/**
	 * Uninitialize the filter system. Unregister all filters.<br>
	 * Original signature : <code>void avfilter_uninit()</code>
	 */
	void avfilter_uninit();
	/**
	 * Register a filter. This is only needed if you plan to use<br>
	 * avfilter_get_by_name later to lookup the AVFilter structure by name. A<br>
	 * filter can still by instantiated with avfilter_open even if it is not<br>
	 * registered.<br>
	 * * @param filter the filter to register<br>
	 * @return 0 if the registration was successful, a negative value<br>
	 * otherwise<br>
	 * Original signature : <code>int avfilter_register(AVFilter*)</code>
	 */
	int avfilter_register(AVFilter filter);
	/**
	 * Get a filter definition matching the given name.<br>
	 * * @param name the filter name to find<br>
	 * @return     the filter definition, if any matching one is registered.<br>
	 *             NULL if none found.<br>
	 * Original signature : <code>AVFilter* avfilter_get_by_name(const char*)</code><br>
	 * @deprecated use the safer methods {@link #avfilter_get_by_name(java.lang.String)} and {@link #avfilter_get_by_name(com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	AVFilter avfilter_get_by_name(Pointer name);
	/**
	 * Get a filter definition matching the given name.<br>
	 * * @param name the filter name to find<br>
	 * @return     the filter definition, if any matching one is registered.<br>
	 *             NULL if none found.<br>
	 * Original signature : <code>AVFilter* avfilter_get_by_name(const char*)</code>
	 */
	AVFilter avfilter_get_by_name(String name);
	/**
	 * If filter is NULL, returns a pointer to the first registered filter pointer,<br>
	 * if filter is non-NULL, returns the next pointer after filter.<br>
	 * If the returned pointer points to NULL, the last registered filter<br>
	 * was already reached.<br>
	 * Original signature : <code>AVFilter** av_filter_next(AVFilter**)</code><br>
	 * @deprecated use the safer method {@link #av_filter_next(org.javaavc.gen.avfilter.AVFilter.ByReference[])} instead
	 */
	@Deprecated 
	AVFilter.ByReference[] av_filter_next(PointerByReference filter);
	/**
	 * If filter is NULL, returns a pointer to the first registered filter pointer,<br>
	 * if filter is non-NULL, returns the next pointer after filter.<br>
	 * If the returned pointer points to NULL, the last registered filter<br>
	 * was already reached.<br>
	 * Original signature : <code>AVFilter** av_filter_next(AVFilter**)</code>
	 */
	AVFilter.ByReference[] av_filter_next(AVFilter.ByReference filter[]);
	/**
	 * Create a filter instance.<br>
	 * * @param filter_ctx put here a pointer to the created filter context<br>
	 * on success, NULL on failure<br>
	 * @param filter    the filter to create an instance of<br>
	 * @param inst_name Name to give to the new instance. Can be NULL for none.<br>
	 * @return >= 0 in case of success, a negative error code otherwise<br>
	 * Original signature : <code>int avfilter_open(AVFilterContext**, AVFilter*, const char*)</code><br>
	 * @deprecated use the safer methods {@link #avfilter_open(org.javaavc.gen.avfilter.AVFilterContext.ByReference[], org.javaavc.gen.avfilter.AVFilter, java.lang.String)} and {@link #avfilter_open(org.javaavc.gen.avfilter.AVFilterContext.ByReference[], org.javaavc.gen.avfilter.AVFilter, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	int avfilter_open(PointerByReference filter_ctx, AVFilter filter, Pointer inst_name);
	/**
	 * Create a filter instance.<br>
	 * * @param filter_ctx put here a pointer to the created filter context<br>
	 * on success, NULL on failure<br>
	 * @param filter    the filter to create an instance of<br>
	 * @param inst_name Name to give to the new instance. Can be NULL for none.<br>
	 * @return >= 0 in case of success, a negative error code otherwise<br>
	 * Original signature : <code>int avfilter_open(AVFilterContext**, AVFilter*, const char*)</code>
	 */
	int avfilter_open(AVFilterContext.ByReference filter_ctx[], AVFilter filter, String inst_name);
	/**
	 * Create a filter instance.<br>
	 * * @param filter_ctx put here a pointer to the created filter context<br>
	 * on success, NULL on failure<br>
	 * @param filter    the filter to create an instance of<br>
	 * @param inst_name Name to give to the new instance. Can be NULL for none.<br>
	 * @return >= 0 in case of success, a negative error code otherwise<br>
	 * Original signature : <code>int avfilter_open(AVFilterContext**, AVFilter*, const char*)</code>
	 */
	int avfilter_open(AVFilterContext.ByReference filter_ctx[], AVFilter filter, Pointer inst_name);
	/**
	 * Initialize a filter.<br>
	 * * @param filter the filter to initialize<br>
	 * @param args   A string of parameters to use when initializing the filter.<br>
	 *               The format and meaning of this string varies by filter.<br>
	 * @param opaque Any extra non-string data needed by the filter. The meaning<br>
	 *               of this parameter varies by filter.<br>
	 * @return       zero on success<br>
	 * Original signature : <code>int avfilter_init_filter(AVFilterContext*, const char*, void*)</code><br>
	 * @deprecated use the safer methods {@link #avfilter_init_filter(org.javaavc.gen.avfilter.AVFilterContext, java.lang.String, com.sun.jna.Pointer)} and {@link #avfilter_init_filter(org.javaavc.gen.avfilter.AVFilterContext, com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	int avfilter_init_filter(AVFilterContext filter, Pointer args, Pointer opaque);
	/**
	 * Initialize a filter.<br>
	 * * @param filter the filter to initialize<br>
	 * @param args   A string of parameters to use when initializing the filter.<br>
	 *               The format and meaning of this string varies by filter.<br>
	 * @param opaque Any extra non-string data needed by the filter. The meaning<br>
	 *               of this parameter varies by filter.<br>
	 * @return       zero on success<br>
	 * Original signature : <code>int avfilter_init_filter(AVFilterContext*, const char*, void*)</code>
	 */
	int avfilter_init_filter(AVFilterContext filter, String args, Pointer opaque);
	/**
	 * Free a filter context.<br>
	 * * @param filter the filter to free<br>
	 * Original signature : <code>void avfilter_free(AVFilterContext*)</code>
	 */
	void avfilter_free(AVFilterContext filter);
	/**
	 * Insert a filter in the middle of an existing link.<br>
	 * * @param link the link into which the filter should be inserted<br>
	 * @param filt the filter to be inserted<br>
	 * @param filt_srcpad_idx the input pad on the filter to connect<br>
	 * @param filt_dstpad_idx the output pad on the filter to connect<br>
	 * @return     zero on success<br>
	 * Original signature : <code>int avfilter_insert_filter(AVFilterLink*, AVFilterContext*, unsigned, unsigned)</code>
	 */
	int avfilter_insert_filter(AVFilterLink link, AVFilterContext filt, int filt_srcpad_idx, int filt_dstpad_idx);
	public static class AVFilterChannelLayouts extends PointerType {
		public AVFilterChannelLayouts(Pointer address) {
			super(address);
		}
		public AVFilterChannelLayouts() {
			super();
		}
	};
	public static class AVClass extends PointerType {
		public AVClass(Pointer address) {
			super(address);
		}
		public AVClass() {
			super();
		}
	};
	public static class AVRational extends PointerType {
		public AVRational(Pointer address) {
			super(address);
		}
		public AVRational() {
			super();
		}
	};
	public static class AVFilterFormats extends PointerType {
		public AVFilterFormats(Pointer address) {
			super(address);
		}
		public AVFilterFormats() {
			super();
		}
	};
	public static class AVFilterCommand extends PointerType {
		public AVFilterCommand(Pointer address) {
			super(address);
		}
		public AVFilterCommand() {
			super();
		}
	};
	public static class AVFilterPool extends PointerType {
		public AVFilterPool(Pointer address) {
			super(address);
		}
		public AVFilterPool() {
			super();
		}
	};
	public static class AVFilterGraph extends PointerType {
		public AVFilterGraph(Pointer address) {
			super(address);
		}
		public AVFilterGraph() {
			super();
		}
	};
	public static class AVDictionary extends PointerType {
		public AVDictionary(Pointer address) {
			super(address);
		}
		public AVDictionary() {
			super();
		}
	};
}
